message_row: Correctly align bot icon in message area.
The bot icon in the message area is center-aligned,
but due to its shape, it appears slightly misaligned
with the bot name text.

This commit fixes the by adding a 1px bottom margin.

Fixes: #32992

--- a/web/styles/message_row.css
+++ b/web/styles/message_row.css
@@ -425,6 +425,11 @@
             .zulip-icon.zulip-icon-bot {
                 align-self: center;
                 margin-left: 5px;
+                /* The bot icon is center-aligned but appears
+                slightly misaligned with the bot name text due
+                to its shape. Adding a negative top margin ensures
+                it's proper alignment. */
+                margin-top: -0.12em;
             }
 
             .sender_name {
